content/consul/v1.8.x/content/commands/kv/delete.mdx
---
layout: commands
page_title: 'Commands: KV Delete'
sidebar_title: delete
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-11-04T10:42:51-06:00
# END AUTO GENERATED METADATA
---

# Consul KV Delete

Command: `consul kv delete`

The `kv delete` command removes the value from Consul's KV store at the
given path. If no key exists at the path, no action is taken.

## Usage

Usage: `consul kv delete [options] KEY_OR_PREFIX`

#### API Options

@include 'http_api_options_client.mdx'

@include 'http_api_options_server.mdx'

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

#### KV Delete Options

- `-cas` - Perform a Check-And-Set operation. Specifying this value also
  requires the -modify-index flag to be set. The default value is false.

- `-modify-index=<int>` - Unsigned integer representing the ModifyIndex of the
  key. This is used in combination with the -cas flag.

- `-recurse` - Recursively delete all keys with the path. The default value is
  false.

## Examples

To remove the value for the key named "redis/config/connections" in the
KV store:

```shell-session
$ consul kv delete redis/config/connections
Success! Deleted key: redis/config/connections
```

If the key does not exist, the command will not error, and a success message
will be returned:

```shell-session
$ consul kv delete not-a-real-key
Success! Deleted key: not-a-real-key
```

To only delete a key if it has not been modified since a given index, specify
the `-cas` and `-modify-index` flags:

```shell-session
$ consul kv get -detailed redis/config/connections | grep ModifyIndex
ModifyIndex      456

$ consul kv delete -cas -modify-index=123 redis/config/connections
Error! Did not delete key redis/config/connections: CAS failed

$ consul kv delete -cas -modify-index=456 redis/config/connections
Success! Deleted key: redis/config/connections
```

To recursively delete all keys that start with a given prefix, specify the
`-recurse` flag:

```shell-session
$ consul kv delete -recurse redis/
Success! Deleted keys with prefix: redis/
```

!> **Trailing slashes are important** in the recursive delete operation, since
Consul performs a greedy match on the provided prefix. If you were to use "foo"
as the key, this would recursively delete any key starting with those letters
such as "foo", "food", and "football" not just "foo". To ensure you are deleting
a folder, always use a trailing slash.

It is not valid to combine the `-cas` option with `-recurse`, since you are
deleting multiple keys under a prefix in a single operation:

```shell-session
$ consul kv delete -cas -recurse redis/
Cannot specify both -cas and -recurse!
```
